[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/main/ui/cheat-disable.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/main/ui/cheat-enable.wav" type="AudioStream" id=2]
[ext_resource path="res://src/main/ui/cheat-code-detector.gd" type="Script" id=3]
[ext_resource path="res://src/main/utils/DeconflictedAudioStreamPlayer.tscn" type="PackedScene" id=4]

[node name="CheatCodeDetector" type="Node"]
script = ExtResource( 3 )

[node name="CheatDisableSound" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 1 )
volume_db = -4.0

[node name="CheatEnableSound" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 2 )
volume_db = -4.0
